# Strive_Engineering

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/loopguard/: Cargo.toml
crates/loopguard/src/: budget.rs  guard.rs  injection.rs  integrity.rs  lib.rs  main.rs  policy.rs  verifier.rs
dashboard/: index.html
docs/: SESSION_HANDOFF.md  failure-modes.md  primitives-matrix.md  research-arxiv.md  research-notes.md  safety.md
docs/conventions/: RUNLOG.md  STATE.md
loopengine/: README.md  pyproject.toml
loopengine/loopengine/: __init__.py  assisted.py  authoring.py  budget.py  cli.py  compaction.py  connectors.py  consistency.py  core.py  dashboard_api.py  gitscan.py  makers.py  reflexion.py  runtime.py  scheduler.py  state.py  validate.py  verifier.py  worktree.py
loopengine/tests/: test_assisted.py  test_authoring.py  test_compaction.py  test_l3_connectors.py  test_makers.py  test_research_features.py  test_runtime.py  test_scheduler_dashboard.py
loops/: example-assisted-fix.json  example-l3-autofix.json  example-triage.json
schemas/: loop.schema.json
