[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loopengine"
version = "0.1.0"
description = "The Python loop-engineering runtime: triggers, scheduling, external state, maker/checker, and escalation — driving the Rust loopguard constraints core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "krishddd" }]
dependencies = []

[project.optional-dependencies]
dashboard = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8"]

[project.scripts]
loopengine = "loopengine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["loopengine*"]
