[package]
name = "loopguard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The constraints core for the loop-engineering runtime: deterministic command guard, budget/iteration/wall-clock enforcement, and grounded verification primitives."

[lib]
name = "loopguard"
path = "src/lib.rs"

[[bin]]
name = "loopguard"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
